--- a/ClientApp/src/app/group-setup/group-setup.component.html
+++ b/ClientApp/src/app/group-setup/group-setup.component.html
@@ -164,7 +164,7 @@
                    (change)="changeAgNm0($event.target.value)" style="width: 100%;" placeholder="Agent Name"
                    onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
             <div *ngIf="commissionSplitErr">
-              <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+              <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
             </div>
           </div>
 
@@ -286,7 +286,7 @@
                     <input type="text" formControlName="AgentNamefppg" class="form-control mb-2 " style="width: 100%;"
                            placeholder="Agent Name" onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                     <div *ngIf="commissionSplitErr || commissionSplitErrFppg">
-                      <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                      <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                     </div>
                   </div>
                 </div>
@@ -394,7 +394,7 @@
                            style="width: 100%;" placeholder="Agent Name"
                            onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                     <div *ngIf="commissionSplitErr || commissionSplitErrFppi">
-                      <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                      <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                     </div>
                   </div>
                 </div>
@@ -506,7 +506,7 @@
                              style="width: 100%;" placeholder="Agent Name"
                              onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                       <div *ngIf="commissionSplitErr || commissionSplitErrAcc">
-                        <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                        <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                       </div>
                     </div>
                   </div>
@@ -620,7 +620,7 @@
                              style="width: 100%;" placeholder="Agent Name"
                              onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                       <div *ngIf="commissionSplitErr || commissionSplitErrHos">
-                        <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                        <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                       </div>
                     </div>
                   </div>
@@ -735,7 +735,7 @@
                              style="width: 100%;" placeholder="Agent Name"
                              onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                       <div *ngIf="commissionSplitErr || commissionSplitErrEmpCI">
-                        <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                        <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                       </div>
                     </div>
                   </div>
@@ -852,7 +852,7 @@
                       <input type="text" formControlName="AgentNamevolCi" class="form-control mb-2 " style="width: 100%;"
                              placeholder="Agent Name" onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                       <div *ngIf="commissionSplitErr || commissionSplitErrVolCI">
-                        <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                        <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                       </div>
                     </div>
                   </div>
@@ -970,7 +970,7 @@
                              style="width: 100%;" placeholder="Agent Name"
                              onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                       <div *ngIf="commissionSplitErr || commissionSplitErrVolGpLf">
-                        <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                        <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                       </div>
                     </div>
                   </div>
@@ -1087,7 +1087,7 @@
                              style="width: 100%;" placeholder="Agent Name"
                              onkeyup="this.value=this.value.replace(/[^a-zA-Z_]*/,'')">
                       <div *ngIf="commissionSplitErr || commissionSplitErrBGL">
-                        <h6 style="color: #ff6363;">Commission Split Value Cannot Be More Than 100</h6>
+                        <h6 style="color: #ff6363;">Commission Split Value should be 100</h6>
                       </div>
                     </div>
                   </div>
