--- a/ClientApp/src/app/group-setup/group-setup.component.css
+++ b/ClientApp/src/app/group-setup/group-setup.component.css
@@ -99,5 +99,8 @@ padding-bottom: 60px;
       border: 1px solid #1861ac;
   }
   
+  input.ng-invalid.ng-touched{
+      border: 1px solid red;
+  }
 
 
