--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -182,21 +182,23 @@
           <div class="col" style="margin-left: -160px;">
           </div>
           <div class="col" style="justify-content:flex-start;margin-right: 46px;margin-top: 24px;">
-            <input type="radio" class="margin" formControlName="FCVolCIEmpNTB" [(ngModel)]="checked">
+            <input type="radio" value="Employee NTB" class="margin"  formControlName="FCVolCIEmpTB" >
               Employee NTB
           </div>
         </div>
       </div>
       <div class="radio-button">
-        <div *ngFor="let item of radioButtonArr"><input type="radio" value={{item.value}} formControlName="FCVolCIEmpTB_Action" />
-          <label class="radio-label"> {{item.name}}</label></div>
+        <div *ngFor="let item of radioButtonArr">
+          <input type="radio" value={{item.value}} formControlName="FCVolCIEmpTB_Action" />
+          <label class="radio-label"> {{item.name}}</label>
+        </div>
       </div>
       <div class="col-4 pb-4">
         <div class="row" style="justify-content:space-evenly;">
           <div class="col" style="margin-left: -147px;">
           </div>
           <div class="col" style="margin-top: 24px;">
-            <input type="radio" class="margin" formControlName="FCVolCIEmpTB" [(ngModel)]="indeterminate" >
+            <input type="radio" value="Employee TB" class="margin"  formControlName="FCVolCIEmpTB"  >
               Employee TB
           </div>
         </div>
@@ -212,7 +214,7 @@
           <div class="col" style="margin-left: -98px;">
           </div>
           <div class="col" style="justify-content:flex-start;margin-right: 107px;margin-top: 24px;">
-            <input type="radio" class="margin" formControlName="FCVolCISpouseNTB" [(ngModel)]="checked1"
+            <input type="radio" value="Spouse NTB" class="margin" formControlName="FCVolCISpouseNTB"
             >Spouse NTB
           </div>
         </div>
@@ -227,7 +229,7 @@
           <div class="col" style="margin-left: -147px;">
           </div>
           <div class="col" style="margin-top: 24px;">
-            <input type="radio" class="margin" formControlName="FCVolCISpouseTB" [(ngModel)]="indeterminate1">
+            <input type="radio" value=" Spouse TB" class="margin"  formControlName="FCVolCISpouseNTB" >
               Spouse TB
           </div>
         </div>
