validation in all products

--- a/ClientApp/src/app/accident/accident.component.css
+++ b/ClientApp/src/app/accident/accident.component.css
@@ -12,6 +12,12 @@
    
     align-items: center;
   }
+  input.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
+.required {
+  color: red;
+}
   
   
   
