--- a/ClientApp/src/app/fppg/fppg.component.html
+++ b/ClientApp/src/app/fppg/fppg.component.html
@@ -9,7 +9,8 @@
       </div>
 
       <div class="col-3">
-        <span class="label label-default">Product Effective Date</span> 
+        <span class="label label-default">Product Effective Date<span aria-hidden="true" class="required">*</span></span>
+        <!-- <span class="label label-default">Product Effective Date</span>  -->
         <input type="date" formControlName="FCfppgEffectiveDate" [value] = "latest_date" class="form-control mb-2" style="width: 100%;"
           placeholder="Group Effective Date">
       </div>
@@ -18,7 +19,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Situs State</span>
+        <span class="label label-default">Situs State<span aria-hidden="true" class="required">*</span></span>
         <select class="form-control" formControlName="FCfppgSitusState">
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  value={{lookUpDataSitusState.id}} [selected]="lookUpDataSitusState.id==fppgSitus"
           >
@@ -41,7 +42,7 @@
       </div> -->
       <div class="col-4">
 
-        <span class="label label-default">Emp GI Amount Max($)</span>
+        <span class="label label-default">Emp GI Amount Max($)<span aria-hidden="true" class="required">*</span></span>
 
         <input type="text" formControlName="FCfppgEmpGIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Employee GI Amount Max" required
@@ -51,14 +52,14 @@
 
 
       <div class="col-4">
-        <span class="label label-default">Emp QI Amount Max($)</span>
+        <span class="label label-default">Emp QI Amount Max($)<span aria-hidden="true" class="required">*</span></span>
 
         <input type="text" formControlName="FCfppgEmpQIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Employee QI Amount Max" required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-4">
-        <span class="label label-default">Emp SI Max Amount($)</span>
+        <span class="label label-default">Emp SI Max Amount($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text" class="form-control mb-2" formControlName="FCfppgEmpAmtMax" style="width: 100%;"
           placeholder="Employee Max Amount" required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -72,7 +73,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div> -->
       <div class="col-4">
-        <span class="label label-default">Spouse GI Amount Max($)</span>
+        <span class="label label-default">Spouse GI Amount Max($)<span aria-hidden="true" class="required">*</span></span>
 
         <input type="text" formControlName="FCfppgSpouseGIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Spouse GI Amount Max
@@ -80,13 +81,13 @@
            onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-4">
-        <span class="label label-default">Spouse QI Amount Max($)</span>
+        <span class="label label-default">Spouse QI Amount Max($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text" formControlName="FCfppgSpouseQIAmtMax" class="form-control mb-2 " style="width: 100%;"
           placeholder="Spouse QI Amount Max"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-4">
-        <span class="label label-default">Spouse SI Max Amount($)</span>
+        <span class="label label-default">Spouse SI Max Amount($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text" formControlName="FCfppgSpouseMaxAmt" class="form-control mb-2 " style="width: 100%;"
           placeholder="Spouse Max Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -99,19 +100,19 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Employee Plan code </span>
+        <span class="label label-default">Employee Plan code <span aria-hidden="true" class="required">*</span></span>
         <input type="text" formControlName="FCfppgEmpPlanCode" class="form-control mb-2 " style="width: 100%;"
           placeholder="Employee Plan code">
       </div>
 
       <div class="col-3">
-        <span class="label label-default">Spouse Plan code</span>
+        <span class="label label-default">Spouse Plan code<span aria-hidden="true" class="required">*</span></span>
         <input type="text" formControlName="FCfppgSpousePlanCode" class="form-control mb-2 " style="width: 100%;"
           placeholder="Spouse Plan code">
       </div>
 
       <div class="col-3">
-        <span class="label label-default">Child Plan code </span>
+        <span class="label label-default">Child Plan code <span aria-hidden="true" class="required">*</span></span>
         <input type="text" formControlName="FCfppgChildPlanCode" class="form-control mb-2 " style="width: 100%;"
           placeholder=" Child Plan code ">
       </div>
