--- a/ClientApp/src/app/basic-group-life/basic-group-life.component.html
+++ b/ClientApp/src/app/basic-group-life/basic-group-life.component.html
@@ -15,7 +15,7 @@
 
   </div>-->
       <div class="col-3">
-        <span class="label label-default">Product Effective Date</span>
+        <span class="label label-default">Product Effective Date<span aria-hidden="true" class="required">*</span></span>
         <input type="date" [value]="latest_datebasicgrplife" formControlName="FCbasicEffectiveDate"
                class="form-control mb-2 " style="width: 100%;" placeholder="Group Effective Date">
       </div>
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Situs State</span>
+        <span class="label label-default">Situs State<span aria-hidden="true" class="required">*</span></span>
         <select class="form-control" formControlName="FCbasicSitusState">
           <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates" [selected]="lookUpDataSitusState.id==bglStatus"
@@ -50,7 +50,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Employee Face Amount($)</span>
+        <span class="label label-default">Employee Face Amount($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text" class="form-control mb-2 " formControlName="FCbasicEmpFcAmt" style="width: 100%;"
           placeholder="Employee Face Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
@@ -65,13 +65,13 @@
           <label class="radio-label">Validate</label></div>
       </div> -->
       <div class="col-3">
-        <span class="label label-default">Spouse Face Amount($)</span>
+        <span class="label label-default">Spouse Face Amount($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text" class="form-control mb-2 " formControlName="SpouseFaceAmount" style="width: 100%;"
           placeholder="Spouse Face Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Child Face Amount($)</span>
+        <span class="label label-default">Child Face Amount($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text" class="form-control mb-2 " formControlName="ChildFaceAmount" style="width: 100%;"
           placeholder="Child Face Amount"required
           onkeyup="this.value=this.value.replace(/[^\d]/,'')">
