--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.css
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.css
@@ -2,18 +2,12 @@
     margin-left: 8px;
   }
 
-
-  /* .example-h2 {
-    margin: 10px;
-  }
-   */
-  /* .section {
-    display: flex;
-    align-content: center;
-    align-items: center;
-    height: 60px;
-  }
-   */
   .margin {
     margin: 0 10px;
   }
+  .required {
+    color: red;
+  }
+  input.ng-invalid.ng-touched{
+    border: 1px solid red;
+}
