--- a/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
+++ b/ClientApp/src/app/hospital-indemnity/hospital-indemnity.component.html
@@ -6,7 +6,7 @@
         <label class="radio-label"> {{item.name}}</label></div>
     </div>
     <div class="col-3">
-      <span class="label label-default">Product Effective Date</span>
+      <span class="label label-default">Product Effective Date<span aria-hidden="true" class="required">*</span></span>
       <input type="date" [value]="latest_datehospitalindemnity" class="form-control mb-2 " style="width: 100%;"
         placeholder="Group Effective Date" formControlName="FChospEffectiveDate">
 
@@ -16,7 +16,7 @@
         <label class="radio-label"> {{item.name}}</label></div>
     </div>
     <div class="col-3">
-      <span class="label label-default">Situs State</span>
+      <span class="label label-default">Situs State<span aria-hidden="true" class="required">*</span></span>
       <select class="form-control" formControlName = "FChospSitusState">
         <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
         <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id==hiStatus"
