--- a/ClientApp/src/app/vol-group-life/vol-group-life.component.html
+++ b/ClientApp/src/app/vol-group-life/vol-group-life.component.html
@@ -7,7 +7,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Product Effective Date</span>
+        <span class="label label-default">Product Effective Date<span aria-hidden="true" class="required">*</span></span>
         <input type="date" [value]="latest_datevolgrplife" formControlName="FCVolGrpLfEffectiveDate" class="form-control mb-2" style="width: 100%;"
           placeholder="Group Effective Date">
 
@@ -17,7 +17,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3">
-        <span class="label label-default">Situs State</span>
+        <span class="label label-default">Situs State<span aria-hidden="true" class="required">*</span></span>
         <select class="form-control" formControlName = "FCVolGrpLfSitusState">
           <!-- <option hidden disabled selected value> -- select Situs State -- </option> -->
           <option *ngFor="let lookUpDataSitusState of lookUpDataSitusStates"  [selected]="lookUpDataSitusState.id==volGrpSitus"
@@ -40,13 +40,13 @@
       </div>
       <div class="col-3">
 
-        <span class="label label-default">Emp GI Amount Max($)</span>
+        <span class="label label-default">Emp GI Amount Max($)<span aria-hidden="true" class="required">*</span></span>
 
         <input type="text" class="form-control mb-2 " formControlName="FCVolGrpLfEmpGIAmtMax" style="width: 100%;" placeholder="Employee GI Amount Max"required
         onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
       <div class="col-3">
-        <span class="label label-default">Emp Max Amount($)</span>
+        <span class="label label-default">Emp Max Amount($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text"  formControlName="FCVolGrpLfEmpAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Employee Max Amount"required
         onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
@@ -68,7 +68,7 @@
           <label class="radio-label"> {{item.name}}</label></div>
       </div>
       <div class="col-3" style="margin-left: 23px;">
-        <span class="label label-default">Spouse GI Amount Max($)</span>
+        <span class="label label-default">Spouse GI Amount Max($)<span aria-hidden="true" class="required">*</span></span>
 
         <input type="text"  formControlName="FCVolGrpLfSpouseGIAmtMax" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse GI Amount Max
               "required
@@ -76,7 +76,7 @@
       </div>
      
       <div class="col-3" style="justify-content:space-evenly;">
-        <span class="label label-default">Spouse Max Amount($)</span>
+        <span class="label label-default">Spouse Max Amount($)<span aria-hidden="true" class="required">*</span></span>
         <input type="text"  formControlName="FCVolGrpLfSpouseMaxAmt" class="form-control mb-2 " style="width: 100%;" placeholder="Spouse Max Amount"required
         onkeyup="this.value=this.value.replace(/[^\d]/,'')">
       </div>
