validation and radio button

--- a/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
+++ b/ClientApp/src/app/voluntary-ci/voluntary-ci.component.html
@@ -211,11 +211,11 @@
       </div>
       <div class="col-4">
         <div class="row" style="justify-content:space-evenly;">
-          <div class="col" style="margin-left: -98px;">
+          <div class="col" style="margin-left: -160px;">
           </div>
-          <div class="col" style="justify-content:flex-start;margin-right: 107px;margin-top: 24px;">
-            <input type="radio" value="Spouse NTB" class="margin" formControlName="FCVolCISpouseNTB"
-            >Spouse NTB
+          <div class="col" style="justify-content:flex-start;margin-right: 46px;margin-top: 24px;">
+            <input type="radio" value="Spouse NTB" class="margin"  formControlName="FCVolCISpouseNTB" >
+            Spouse NTB
           </div>
         </div>
       </div>
